# king-synapse

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  RELEASE-v0.2.0.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: accelerator.rs  config.rs  embed.rs  enterprise_shadow.rs  entity.rs  error.rs  lib.rs  model.rs  rerank.rs
crates/core/tests/: cognitive_booster_interface_test.rs  enterprise_shadow_test.rs  memory_competition_test.rs  phase5_cognitive_booster_shadow_test.rs  store_tests.rs  temporal_memory_transition_test.rs  temporal_reactivation_test.rs  temporal_supersession_test.rs
crates/eval/: Cargo.toml  README.md
crates/eval/config/: phase7_2_2_canonical_prompt_v1.md  phase7_2_2_parser_policy_v1.json  phase7_2_2_provider_manifests.json  phase7_2_2_scorer_policy_v1.json  phase7_3_1_ai_adjudicator_prompt_v1.md  phase7_3_1_ai_reviewer_prompt_v1.md  phase7_3_2_semantic_judge_prompt_v1.md  phase7_3_3_a_diagnostics_manifest_v1.json  phase7_3_3_a_execution_policy_v1.json  phase7_3_3_a_partial_atomic_claim_supplement_manifest_v1.json  phase7_3_3_atomic_claim_judge_prompt_v1.md  phase7_3_3_c_atomic_claim_classifier_prompt_v1.md  phase7_3_3_c_execution_policy_v1.json  phase7_3_3_d_atomic_vs_candidate_aggregation_policy_v1.json  phase7_3_3_d_atomic_vs_candidate_metric_specification_v1.json  phase7_3_3_d_atomic_vs_candidate_paired_evaluation_protocol_v1.json  phase7_3_3_d_boundary_adjudication_protocol_v3.json  phase7_3_3_d_boundary_adjudication_protocol_v4.json  phase7_3_3_d_boundary_adjudicator_prompt_v3.md  phase7_3_3_d_boundary_adjudicator_prompt_v4.md  phase7_3_3_d_boundary_agreement_protocol_v3.json  phase7_3_3_d_boundary_correction_protocol_v1.json  phase7_3_3_d_boundary_coverage_policy_v1.json  phase7_3_3_d_boundary_coverage_rerun_protocol_v1.json  phase7_3_3_d_boundary_gold_freeze_protocol_v1.json  phase7_3_3_d_boundary_omission_resolution_execution_policy_v1.json  phase7_3_3_d_boundary_omission_resolution_execution_policy_v2.json  phase7_3_3_d_boundary_omission_resolution_prompt_v1.md  phase7_3_3_d_boundary_omission_resolution_prompt_v2.md  phase7_3_3_d_boundary_omission_resolution_protocol_v1.json  phase7_3_3_d_boundary_omission_resolution_protocol_v2.json  phase7_3_3_d_boundary_reviewer_execution_policy_v1.json  phase7_3_3_d_boundary_reviewer_execution_policy_v2.json  phase7_3_3_d_boundary_reviewer_execution_policy_v3.json  phase7_3_3_d_boundary_reviewer_prompt_v1.md  phase7_3_3_d_boundary_reviewer_prompt_v2.md  phase7_3_3_d_boundary_reviewer_prompt_v3.md  phase7_3_3_d_equal_resource_dual_arm_policy_v1.json  phase7_3_3_d_failure_taxonomy_v1.json  phase7_3_3_d_failure_taxonomy_v2.json  (+220 more)
crates/eval/datasets/: basic.toml  coding_mem.toml  exported_cognitive_session.toml  governance_bias.toml  governance_competition.toml  governance_drift.toml  governance_feedback.toml  governance_recovery.toml  governance_regulation_boundary.toml  governance_replay.toml  governance_self_consistency.toml  governance_soft_dominance.toml  governance_stress.toml  multihop.toml  reference.toml  rewrite.toml  semantic.toml
crates/eval/reports/: deepseek-external-protocol-gate.json  dmr-200-punctuation-validation.json  dmr-50-punctuation-validation.json  dmr-50-validation.json  dmr-500-failure-mode-gate.json  dmr-failure-mode-taxonomy.json  dmr-mapping-audit.json  dmr-mapping-boundary-impact.json  dmr-mapping-policy-gate.json  dmr-mapping-policy-review.json  dmr-mapping-rejected-inspection.json  dmr-no-rank-failure-classification.json  dmr-top-context-significance.json  external-comparison-hosted.json  external-comparison-latest.json  external-comparison-manifest.json  external-comparison-task-gate.json  hosted-external-preconditions.json  letta-external-comparison.json  llm-reranker-hardcore-test.json  long-horizon-cognitive-memory.json  long-horizon-prediction-evidence-audit.json  long-horizon-stability-audit.json  long-horizon-task-gate.json  longmem-200-sens-fts0.5.json  longmem-200-sens-fts1.5.json  longmem-200-sens-rrf40.json  longmem-200-sens-rrf80.json  longmem-200-sens-vw0.5.json  longmem-200-sens-vw0.8-fts1.5.json  longmem-200-sens-vw0.8.json  longmem-200-sens-vw1.0.json  longmem-200-sens-vw1.2.json  longmem-50-validation.json  longmem-500-public-baseline-rrf.json  longmem-500-public-pool100-vw1.5.json  longmem-500-public-rerank-pool-100.json  longmem-500-public-vectors-rerank.json  longmem-500-public-vectors.json  longmem-dmr-smoke-latest.json  (+1063 more)
crates/eval/results/: recall-api-freeze.json
crates/eval/src/: algorithms.rs  cognitive_competition_stability.rs  cognitive_memory_benchmark.rs  contextual_competition_integration.rs  contract.rs  external.rs  governance_aggregation.rs  governance_bias.rs  governance_calibration.rs  governance_competition.rs  governance_confidence.rs  governance_drift.rs  governance_eval.rs  governance_recovery.rs  governance_regulation_boundary.rs  governance_replay.rs  governance_self_consistency.rs  governance_soft_dominance.rs  governance_stress.rs  harness.rs  lib.rs  metrics.rs  phase2_competition_eval.rs  phase2_temporal_influence_eval.rs  phase2_temporal_stress_eval.rs  phase3_future_influence.rs  phase3_lesson_candidate_eval.rs  phase3_lesson_lifecycle.rs  phase3_lesson_promotion.rs  phase3_reflection_observation.rs  phase4_cognitive_competition.rs  phase4_cognitive_influence.rs  phase4_contextual_weighting.rs  phase5_cognitive_generalization.rs  phase5_cognitive_policy.rs  phase5_cognitive_trace.rs  phase5_end_to_end_cognitive.rs  phase5_shadow_ranking.rs  phase5_trace_quality.rs  phase6_cognitive_baseline_comparison.rs  (+21 more)
crates/eval/tests/: phase1_dataset_scaling_test.rs  phase1_freeze_test.rs  phase2_competition_eval_test.rs  phase2_temporal_influence_eval_test.rs  phase2_temporal_stress_eval_test.rs  phase3_future_influence_test.rs  phase3_lesson_candidate_eval_test.rs  phase3_lesson_lifecycle_test.rs  phase3_lesson_promotion_test.rs  phase3_reflection_observation_test.rs  phase4_cognitive_competition_stability_test.rs  phase5_shadow_ranking_test.rs  (+25 more)
crates/mcp-server/: Cargo.toml
(+2219 files in other folders)
