[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mcp-server",
    "crates/cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lake121380-source/king-synapse"
authors = ["King Synapse Contributors"]

[workspace.dependencies]
synapse-core = { path = "crates/core" }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
directories = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
