[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
zerocopy = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
fastembed = { workspace = true, features = ["directml"] }
ort = { workspace = true, features = ["copy-dylibs", "cuda", "directml"] }

[target.'cfg(not(windows))'.dependencies]
fastembed = { workspace = true }
