[package]
name = "synapse-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "kr-eval"
path = "src/bin/bench.rs"

[[bench]]
name = "reflection_yield"
path = "benches/algorithms/reflection_yield.rs"
harness = false

[[bench]]
name = "merge_precision"
path = "benches/algorithms/merge_precision.rs"
harness = false

[[bench]]
name = "forget_precision"
path = "benches/algorithms/forget_precision.rs"
harness = false

[[bench]]
name = "hebbian_consistency"
path = "benches/algorithms/hebbian_consistency.rs"
harness = false

[[bench]]
name = "cognitive_chain_recall"
path = "benches/algorithms/cognitive_chain_recall.rs"
harness = false

[[bench]]
name = "cognitive_trace_dominance"
path = "benches/algorithms/cognitive_trace_dominance.rs"
harness = false

[[bench]]
name = "trace_reinforcement"
path = "benches/algorithms/trace_reinforcement.rs"
harness = false

[[bench]]
name = "predictive_trace"
path = "benches/algorithms/predictive_trace.rs"
harness = false

[[bench]]
name = "activation_parameter_sweep"
path = "benches/algorithms/activation_parameter_sweep.rs"
harness = false

[[bench]]
name = "long_horizon_cognitive_memory"
path = "benches/algorithms/long_horizon_cognitive_memory.rs"
harness = false

[dependencies]
synapse-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
