[package]
name = "synapse-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "kr-eval"
path = "src/bin/bench.rs"

[[bin]]
name = "kr-external-eval"
path = "src/bin/external_eval.rs"

[[bin]]
name = "kr-governance-eval"
path = "src/bin/governance_eval.rs"

[[bin]]
name = "kr-governance-bias-eval"
path = "src/bin/governance_bias_eval.rs"

[[bin]]
name = "kr-governance-stress-eval"
path = "src/bin/governance_stress_eval.rs"

[[bin]]
name = "kr-governance-calibration-eval"
path = "src/bin/governance_calibration_eval.rs"

[[bin]]
name = "kr-governance-confidence-eval"
path = "src/bin/governance_confidence_eval.rs"

[[bin]]
name = "kr-governance-aggregation-eval"
path = "src/bin/governance_aggregation_eval.rs"

[[bin]]
name = "kr-governance-replay-eval"
path = "src/bin/governance_replay_eval.rs"

[[bin]]
name = "kr-governance-drift-eval"
path = "src/bin/governance_drift_eval.rs"

[[bin]]
name = "kr-governance-recovery-eval"
path = "src/bin/governance_recovery_eval.rs"

[[bin]]
name = "kr-governance-competition-eval"
path = "src/bin/governance_competition_eval.rs"

[[bin]]
name = "kr-governance-soft-dominance-eval"
path = "src/bin/governance_soft_dominance_eval.rs"

[[bin]]
name = "kr-governance-regulation-boundary-eval"
path = "src/bin/governance_regulation_boundary_eval.rs"

[[bin]]
name = "kr-governance-self-consistency-eval"
path = "src/bin/governance_self_consistency_eval.rs"

[[bin]]
name = "kr-cognitive-memory-benchmark"
path = "src/bin/cognitive_memory_benchmark.rs"

[[bench]]
name = "reflection_yield"
path = "benches/algorithms/reflection_yield.rs"
harness = false

[[bench]]
name = "merge_precision"
path = "benches/algorithms/merge_precision.rs"
harness = false

[[bench]]
name = "forget_precision"
path = "benches/algorithms/forget_precision.rs"
harness = false

[[bench]]
name = "hebbian_consistency"
path = "benches/algorithms/hebbian_consistency.rs"
harness = false

[[bench]]
name = "cognitive_chain_recall"
path = "benches/algorithms/cognitive_chain_recall.rs"
harness = false

[[bench]]
name = "cognitive_trace_dominance"
path = "benches/algorithms/cognitive_trace_dominance.rs"
harness = false

[[bench]]
name = "trace_reinforcement"
path = "benches/algorithms/trace_reinforcement.rs"
harness = false

[[bench]]
name = "predictive_trace"
path = "benches/algorithms/predictive_trace.rs"
harness = false

[[bench]]
name = "activation_parameter_sweep"
path = "benches/algorithms/activation_parameter_sweep.rs"
harness = false

[[bench]]
name = "long_horizon_cognitive_memory"
path = "benches/algorithms/long_horizon_cognitive_memory.rs"
harness = false

[[bench]]
name = "long_horizon_stability_audit"
path = "benches/algorithms/long_horizon_stability_audit.rs"
harness = false

[[bench]]
name = "exported_cognitive_session"
path = "benches/algorithms/exported_cognitive_session.rs"
harness = false

[[bench]]
name = "expanded_cognitive_replay"
path = "benches/algorithms/expanded_cognitive_replay.rs"
harness = false

[dependencies]
synapse-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
